--- a/Kismat App/MainViewController/Xibs/GeneralButtonTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralButtonTVCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="70" id="KGk-i7-Jjw" customClass="GeneralButtonTVCell" customModule="Kismat_App" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="70" id="KGk-i7-Jjw" customClass="GeneralButtonTVCell" customModule="Kismmet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -22,10 +22,42 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3EA-uD-ouF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="70"/>
                         <subviews>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E8h-bP-JxP">
+                                <rect key="frame" x="21" y="7" width="333" height="56"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZAd-UL-V59" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="333" height="56"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="56" id="E23-fx-Dkf"/>
+                                            <constraint firstAttribute="width" constant="333" id="z6E-0c-cgp"/>
+                                        </constraints>
+                                        <color key="tintColor" name="Text grey"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                                <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="ZAd-UL-V59" firstAttribute="top" secondItem="E8h-bP-JxP" secondAttribute="top" id="Kz3-xb-prG"/>
+                                    <constraint firstItem="ZAd-UL-V59" firstAttribute="leading" secondItem="E8h-bP-JxP" secondAttribute="leading" id="Pml-H1-0Wx"/>
+                                    <constraint firstAttribute="height" constant="56" id="mey-rR-IE3"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZAd-UL-V59" secondAttribute="bottom" id="moj-ji-aCU"/>
+                                    <constraint firstAttribute="width" constant="333" id="p8O-g6-fZk"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZAd-UL-V59" secondAttribute="trailing" id="wxg-6K-e7I"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x0h-f3-Hqn">
                                 <rect key="frame" x="21" y="6" width="333" height="56"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o7Z-ym-0jR" customClass="RoundCornerButton" customModule="Kismat_App" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o7Z-ym-0jR" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="333" height="56"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="333" id="gCy-t3-QlK"/>
@@ -43,7 +75,7 @@
                                             <userDefinedRuntimeAttribute type="boolean" keyPath="isFontWork" value="NO"/>
                                         </userDefinedRuntimeAttributes>
                                     </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tb9-pa-d2q" customClass="RoundCornerView" customModule="Kismat_App" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tb9-pa-d2q" customClass="RoundCornerView" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="298" y="18" width="20" height="20"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BG7-e2-Yng">
@@ -89,6 +121,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="70" id="6Wc-Y1-XcS"/>
+                            <constraint firstItem="E8h-bP-JxP" firstAttribute="centerY" secondItem="3EA-uD-ouF" secondAttribute="centerY" id="RwK-mS-jiL"/>
+                            <constraint firstItem="E8h-bP-JxP" firstAttribute="centerX" secondItem="3EA-uD-ouF" secondAttribute="centerX" id="WoT-jp-XpK"/>
                             <constraint firstItem="x0h-f3-Hqn" firstAttribute="centerY" secondItem="3EA-uD-ouF" secondAttribute="centerY" constant="-1" id="Ym9-UP-iqM"/>
                             <constraint firstItem="x0h-f3-Hqn" firstAttribute="centerX" secondItem="3EA-uD-ouF" secondAttribute="centerX" id="guI-gA-3KZ"/>
                         </constraints>
@@ -107,19 +141,28 @@
             <connections>
                 <outlet property="arrowView" destination="Tb9-pa-d2q" id="XYD-UH-hMF"/>
                 <outlet property="genBtn" destination="o7Z-ym-0jR" id="Mqs-p4-5cg"/>
+                <outlet property="genBtnView" destination="x0h-f3-Hqn" id="uXL-FP-3BA"/>
+                <outlet property="newBtn" destination="ZAd-UL-V59" id="01j-0x-n4x"/>
+                <outlet property="newBtnView" destination="E8h-bP-JxP" id="I6d-54-N05"/>
             </connections>
             <point key="canvasLocation" x="52.671755725190835" y="28.87323943661972"/>
         </tableViewCell>
     </objects>
     <designables>
+        <designable name="ZAd-UL-V59">
+            <size key="intrinsicContentSize" width="30" height="30"/>
+        </designable>
         <designable name="o7Z-ym-0jR">
-            <size key="intrinsicContentSize" width="30" height="31"/>
+            <size key="intrinsicContentSize" width="30" height="30"/>
         </designable>
     </designables>
     <resources>
         <image name="arrow.right" catalog="system" width="128" height="95"/>
         <namedColor name="Secondary Grey">
             <color red="0.3059999942779541" green="0.4309999942779541" blue="0.50599998235702515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Text grey">
+            <color red="0.20800000429153442" green="0.31000000238418579" blue="0.35699999332427979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
