--- a/Kismat App/MainViewController/Xibs/MixHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/MixHeaderTVCell.xib
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Work Sans.ttf">
+            <string>WorkSans-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -72,7 +77,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rgH-vW-BiW" customClass="CustomToggleButton" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="295.75" y="7.75" width="27.5" height="15.5"/>
+                                        <rect key="frame" x="283" y="0.0" width="51" height="31"/>
                                         <color key="onTintColor" name="Secondary Grey"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="scale">
@@ -102,6 +107,25 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8lF-4I-lbp">
                                 <rect key="frame" x="17.666666666666657" y="0.0" width="340" height="44"/>
                                 <subviews>
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ba2-uk-kVn" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="247" y="6" width="86" height="32"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="86" id="n3H-lx-5ni"/>
+                                            <constraint firstAttribute="height" constant="32" id="yi1-3V-NSQ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
+                                        <color key="tintColor" name="Success"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="Read All">
+                                            <color key="titleColor" name="Success"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="bgColor">
+                                                <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3PY-qB-7mJ" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="8" y="-3" width="324" height="47"/>
                                         <constraints>
@@ -125,10 +149,13 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="ba2-uk-kVn" secondAttribute="trailing" constant="7" id="6sJ-lq-9T9"/>
                                     <constraint firstItem="3PY-qB-7mJ" firstAttribute="centerY" secondItem="8lF-4I-lbp" secondAttribute="centerY" constant="-1.5" id="CYz-7O-7js"/>
                                     <constraint firstItem="3PY-qB-7mJ" firstAttribute="centerX" secondItem="8lF-4I-lbp" secondAttribute="centerX" id="HHj-tW-OdO"/>
                                     <constraint firstAttribute="height" constant="44" id="Lxy-7g-PyN"/>
                                     <constraint firstAttribute="width" constant="340" id="NMH-vG-QQU"/>
+                                    <constraint firstAttribute="bottom" secondItem="ba2-uk-kVn" secondAttribute="bottom" constant="6" id="hta-k4-7Wj"/>
+                                    <constraint firstItem="ba2-uk-kVn" firstAttribute="top" secondItem="8lF-4I-lbp" secondAttribute="top" constant="6" id="k57-9Y-Yrl"/>
                                 </constraints>
                             </view>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ObE-7r-VTI">
@@ -243,6 +270,7 @@
                 <outlet property="notifHeaderLbl" destination="3PY-qB-7mJ" id="IlO-Rj-Pq6"/>
                 <outlet property="notifHeaderView" destination="8lF-4I-lbp" id="2z7-cV-PWP"/>
                 <outlet property="proximeterLbl" destination="v3c-Ag-h76" id="r3O-JE-hjr"/>
+                <outlet property="readAllBtn" destination="ba2-uk-kVn" id="ucL-ii-BFx"/>
                 <outlet property="sliderView" destination="MZL-yJ-CQe" id="cyL-aF-g4r"/>
                 <outlet property="toggleBtn" destination="rgH-vW-BiW" id="Vgf-09-5DK"/>
                 <outlet property="toggleBtnView" destination="Rtt-Zr-LA8" id="Hav-1h-6UW"/>
@@ -254,25 +282,25 @@
     </objects>
     <designables>
         <designable name="0ir-Q9-gZ4">
-            <size key="intrinsicContentSize" width="39.333333333333336" height="21.333333333333332"/>
+            <size key="intrinsicContentSize" width="36" height="20.333333333333332"/>
         </designable>
         <designable name="3PY-qB-7mJ">
-            <size key="intrinsicContentSize" width="30.666666666666668" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="36" height="20.333333333333332"/>
         </designable>
         <designable name="5Zd-77-ahs">
             <size key="intrinsicContentSize" width="48" height="48"/>
         </designable>
         <designable name="cx2-Bl-JDe">
-            <size key="intrinsicContentSize" width="14.333333333333334" height="19"/>
+            <size key="intrinsicContentSize" width="14.333333333333334" height="22"/>
         </designable>
         <designable name="jLp-rH-ZeA">
-            <size key="intrinsicContentSize" width="99.666666666666671" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="116" height="20.333333333333332"/>
         </designable>
         <designable name="rgH-vW-BiW">
             <size key="intrinsicContentSize" width="49" height="31"/>
         </designable>
         <designable name="v3c-Ag-h76">
-            <size key="intrinsicContentSize" width="40.333333333333336" height="16.666666666666668"/>
+            <size key="intrinsicContentSize" width="49.666666666666664" height="20.333333333333332"/>
         </designable>
     </designables>
     <resources>
@@ -283,6 +311,9 @@
         </namedColor>
         <namedColor name="Secondary Grey">
             <color red="0.3059999942779541" green="0.4309999942779541" blue="0.50599998235702515" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Success">
+            <color red="0.28999999165534973" green="0.87800002098083496" blue="0.59600001573562622" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
