--- a/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
+++ b/Kismat App/MainViewController/Xibs/GeneralHeaderTVCell.xib
@@ -254,7 +254,7 @@
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cn8-Nl-EBJ">
                                 <rect key="frame" x="8" y="76" width="359" height="103"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vxe-SF-NZ5" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vxe-SF-NZ5">
                                         <rect key="frame" x="323" y="20" width="26" height="26"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -271,7 +271,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rice University, Houston TX" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nzF-aI-iJF" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="98" y="45" width="253" height="20.333333333333329"/>
+                                        <rect key="frame" x="98" y="45" width="253" height="17.666666666666671"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="253" id="Zgs-uT-uNZ"/>
                                         </constraints>
@@ -289,7 +289,7 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Professor" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HOG-bk-97u" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="98" y="63.33333333333335" width="253" height="20.333333333333336"/>
+                                        <rect key="frame" x="98" y="60.666666666666657" width="253" height="17.666666666666657"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="253" id="niB-xs-mxA"/>
                                         </constraints>
@@ -568,7 +568,7 @@
                 <outlet property="professionLbl" destination="HOG-bk-97u" id="r9f-EM-y21"/>
                 <outlet property="profilePicBtn" destination="bc3-O3-AQ1" id="JkI-ZV-GN9"/>
                 <outlet property="profileView" destination="cn8-Nl-EBJ" id="Z9o-6i-PeL"/>
-                <outlet property="rattingBtn" destination="vxe-SF-NZ5" id="dQv-A7-r9q"/>
+                <outlet property="rattingBtn" destination="vxe-SF-NZ5" id="b7R-Nv-UR7"/>
                 <outlet property="searchBtn" destination="xIG-8U-5nc" id="UsV-3R-AUg"/>
                 <outlet property="searchContraint" destination="XdJ-1V-e88" id="SYI-gk-fBd"/>
                 <outlet property="searchTF" destination="Xet-Wr-pR1" id="m59-jb-5gp"/>
@@ -590,25 +590,25 @@
     </objects>
     <designables>
         <designable name="6BT-Eq-hcD">
-            <size key="intrinsicContentSize" width="73.333333333333329" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="128" height="36.666666666666664"/>
         </designable>
         <designable name="A8B-bt-df2">
-            <size key="intrinsicContentSize" width="337.33333333333331" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="271.66666666666669" height="14.333333333333334"/>
         </designable>
         <designable name="Baj-Qv-s2c">
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="Cf5-Cq-dE3">
-            <size key="intrinsicContentSize" width="81" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="148.33333333333334" height="33"/>
         </designable>
         <designable name="HOG-bk-97u">
-            <size key="intrinsicContentSize" width="73" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="70.333333333333329" height="17.666666666666668"/>
         </designable>
         <designable name="bc3-O3-AQ1">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="cjy-qw-b2P">
-            <size key="intrinsicContentSize" width="19.666666666666668" height="22"/>
+            <size key="intrinsicContentSize" width="19.666666666666668" height="19.333333333333332"/>
         </designable>
         <designable name="dX8-SZ-fyC">
             <size key="intrinsicContentSize" width="48" height="48"/>
@@ -617,22 +617,25 @@
             <size key="intrinsicContentSize" width="54" height="54"/>
         </designable>
         <designable name="dpP-cf-H6r">
-            <size key="intrinsicContentSize" width="151.33333333333334" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="173" height="21.333333333333332"/>
         </designable>
         <designable name="j4f-gS-nOe">
-            <size key="intrinsicContentSize" width="362.33333333333331" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="285" height="14.333333333333334"/>
         </designable>
         <designable name="nax-I1-dp4">
             <size key="intrinsicContentSize" width="162" height="152"/>
         </designable>
         <designable name="nzF-aI-iJF">
-            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="203.33333333333334" height="17.666666666666668"/>
         </designable>
         <designable name="pXu-df-J1k">
-            <size key="intrinsicContentSize" width="207.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="164" height="14.333333333333334"/>
         </designable>
         <designable name="v2n-8t-cBj">
-            <size key="intrinsicContentSize" width="207.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="237" height="23.666666666666668"/>
+        </designable>
+        <designable name="vxe-SF-NZ5">
+            <size key="intrinsicContentSize" width="22" height="22"/>
         </designable>
     </designables>
     <resources>
