--- a/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItem2TVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/FeedItem2TVCell.xib
@@ -189,7 +189,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bachelor, Student " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gLy-u7-xbI" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
-                                        <rect key="frame" x="189.33333333333337" y="48" width="139.66666666666663" height="21"/>
+                                        <rect key="frame" x="209" y="48" width="120" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="vuj-kr-rQx"/>
                                         </constraints>
@@ -217,6 +217,7 @@
                                     <constraint firstItem="gLy-u7-xbI" firstAttribute="top" secondItem="0eO-wQ-6fx" secondAttribute="bottom" constant="8" symbolic="YES" id="IRI-vY-fkc"/>
                                     <constraint firstItem="ejV-6Z-Jem" firstAttribute="leading" secondItem="F7S-op-5qg" secondAttribute="trailing" constant="8" symbolic="YES" id="LgF-Jk-Xc8"/>
                                     <constraint firstAttribute="bottom" secondItem="Vca-51-Ogp" secondAttribute="bottom" constant="26.329999999999998" id="NPB-MR-eMF"/>
+                                    <constraint firstItem="gLy-u7-xbI" firstAttribute="leading" secondItem="moH-ve-np3" secondAttribute="trailing" constant="8" symbolic="YES" id="UQA-KV-xmH"/>
                                     <constraint firstItem="0eO-wQ-6fx" firstAttribute="leading" secondItem="F7S-op-5qg" secondAttribute="trailing" constant="8" symbolic="YES" id="crN-hP-k2E"/>
                                     <constraint firstItem="0eO-wQ-6fx" firstAttribute="top" secondItem="ejV-6Z-Jem" secondAttribute="bottom" constant="1" id="k8x-qQ-6ax"/>
                                     <constraint firstAttribute="bottom" secondItem="gLy-u7-xbI" secondAttribute="bottom" constant="9" id="pFW-mF-sX5"/>
@@ -281,22 +282,22 @@
     </objects>
     <designables>
         <designable name="0eO-wQ-6fx">
-            <size key="intrinsicContentSize" width="211" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="126" height="11.666666666666666"/>
         </designable>
         <designable name="1rx-zU-ucu">
-            <size key="intrinsicContentSize" width="53.666666666666664" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="38" height="14"/>
         </designable>
         <designable name="F7S-op-5qg">
             <size key="intrinsicContentSize" width="407" height="612"/>
         </designable>
         <designable name="Xr0-6b-sUq">
-            <size key="intrinsicContentSize" width="104" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="75" height="14"/>
         </designable>
         <designable name="ejV-6Z-Jem">
-            <size key="intrinsicContentSize" width="77.666666666666671" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="66.333333333333329" height="16.333333333333332"/>
         </designable>
         <designable name="gLy-u7-xbI">
-            <size key="intrinsicContentSize" width="139.66666666666666" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="125" height="16.333333333333332"/>
         </designable>
     </designables>
     <resources>
@@ -318,7 +319,7 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
