--- a/Kismat App/Views/ViewControllers/Feed/Xibs/VisibilityOffTVCell.xib
+++ b/Kismat App/Views/ViewControllers/Feed/Xibs/VisibilityOffTVCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,7 +13,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="260" id="KGk-i7-Jjw" customClass="VisibilityOffTVCell" customModule="Kismmat" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="260" id="KGk-i7-Jjw" customClass="VisibilityOffTVCell" customModule="Kismmet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="374" height="260"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -26,7 +26,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n2W-ra-OcS">
                                 <rect key="frame" x="8" y="92" width="358" height="160"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your visibility is off, Please change your visibility to on to view people in your chosen proximity." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uNv-Qs-WlO" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are completely offline... Toggle back to rejoin the community and interact with others" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uNv-Qs-WlO" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="42" y="8" width="290" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="tP4-Mc-FfA"/>
@@ -68,8 +68,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jch-K8-tMu">
                                 <rect key="frame" x="17" y="157" width="340" height="30"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Profile Visibility" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8m-ky-2YE" customClass="fullyCustomLbl" customModule="Kismmat" customModuleProvider="target">
-                                        <rect key="frame" x="8" y="4" width="110" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Online Presence" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b8m-ky-2YE" customClass="fullyCustomLbl" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="8" y="4" width="130" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="R5G-Sh-4JL"/>
                                             <constraint firstAttribute="width" constant="110" id="je1-Ej-I4v"/>
@@ -88,8 +88,8 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pFp-fk-tBI" customClass="RoundCornerButton" customModule="Kismmat" customModuleProvider="target">
-                                        <rect key="frame" x="118" y="7" width="15" height="15"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pFp-fk-tBI" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
+                                        <rect key="frame" x="138" y="7" width="15" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="15" id="Bon-36-bxn"/>
                                             <constraint firstAttribute="height" constant="15" id="QsV-GZ-N58"/>
@@ -106,7 +106,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </button>
-                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Hk-df-lRc" customClass="CustomToggleButton" customModule="Kismmat" customModuleProvider="target">
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Hk-df-lRc" customClass="CustomToggleButton" customModule="Kismmet" customModuleProvider="target">
                                         <rect key="frame" x="293" y="0.0" width="49" height="31"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="47" id="9bu-dU-Mae"/>
@@ -138,7 +138,7 @@
                                     <constraint firstAttribute="bottom" secondItem="b8m-ky-2YE" secondAttribute="bottom" constant="5" id="i4B-ec-Bw6"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wVb-Po-o6r" customClass="RoundCornerButton" customModule="Kismmat" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wVb-Po-o6r" customClass="RoundCornerButton" customModule="Kismmet" customModuleProvider="target">
                                 <rect key="frame" x="137" y="210" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="UcV-YK-llN"/>
@@ -199,13 +199,13 @@
             <size key="intrinsicContentSize" width="49" height="31"/>
         </designable>
         <designable name="b8m-ky-2YE">
-            <size key="intrinsicContentSize" width="116" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="124" height="20.333333333333332"/>
         </designable>
         <designable name="pFp-fk-tBI">
             <size key="intrinsicContentSize" width="48" height="48"/>
         </designable>
         <designable name="uNv-Qs-WlO">
-            <size key="intrinsicContentSize" width="714.33333333333337" height="20.333333333333332"/>
+            <size key="intrinsicContentSize" width="675.33333333333337" height="20.333333333333332"/>
         </designable>
         <designable name="wVb-Po-o6r">
             <size key="intrinsicContentSize" width="51" height="30"/>
